@@ -3,6 +3,7 @@
   - Añadidas plantillas para facturas de cliente de 2 y 3 hojas
   - Añadidos 3 decimales a los pesos en kilos y eliminados los decimales en los pesos en unidades
   - Añadido año en las notas permanentes
+  - Añadido contados de pagos en efectivo por trimestres
 
 # [1.2.1] - 02/05/2021
   - Añadido número de facturas trimestrales a la facturación
